setup navigation with navigation drawer and app routes

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -32,7 +32,7 @@
   "Speech": "Sprachausgabe",
   "StartSpeaking": "Sprachausgabe beginnen",
   "StopSpeaking": "Sprachausgabe stoppen",
-  "Feedback": "Feedback",
+  "Feedback": "Verbesserung vorschlagen",
   "Contribute": "Beitragen",
   "Privacy Policy": "Datenschutzerklärung",
   "Legal Notice": "Impressum",
@@ -118,5 +118,22 @@
   "confirmDeletionTitle": "Löschen bestätigen",
   "deleteAccountMessage": "Es werden sämtliche auf diesem Gerät gespeicherten Daten des Benutzers {username} unwiederbringlich gelöscht.",
   "accountWelcomeMessage": "Hallo **{name}**!",
-  "logout": "Abmelden"
+  "logout": "Abmelden",
+  "betaAppDidExpire": "Diese Beta-Testversion ist **am {date} abgelaufen**.",
+  "betaAppWillExpire": "Diese Beta-Testversion läuft am **{date}** ab.",
+  "AppIsReadOnly": "Die Beta-Testversion ist abgelaufen. Daten können nur gelesen, aber nicht mehr erstellt oder bearbeitet werden.",
+  "betaAppExpirationDescription": "Ab dem Zeitpunkt kannst du deine Daten weiterhin lesend nutzen oder exportieren, aber nicht mehr bearbeiten oder hinzufügen.",
+  "currentVersion": "Aktuelle Version",
+  "userSettings": "Benutzer-Einstellungen",
+  "teamSettings": "Team-Einstellungen",
+  "overview": "Übersicht",
+  "organization": "Organisation",
+  "team": "Team",
+  "organizationSettings": "Organisations-Einstellungen",
+  "userData": "Meine Daten",
+  "teamMembers": "Mitglieder",
+  "absences": "Abwesenheiten",
+  "roster": "Dienstplanung",
+  "selectTeam": "Team auswählen",
+  "selectOrganization": "Organisation auswählen"
 }
