--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -32,7 +32,7 @@
   "Speech": "Speech",
   "StartSpeaking": "Start Speaking",
   "StopSpeaking": "Stop Speaking",
-  "Feedback": "Feedback",
+  "Feedback": "Suggest improvement",
   "Contribute": "Contributing",
   "Privacy Policy": "Privacy Policy",
   "Legal Notice": "Legal Notice",
@@ -118,5 +118,22 @@
   "confirmDeletionTitle": "Confirm deletion",
   "deleteAccountMessage": "All data of the user {username} stored on this device will be irretrievably deleted.",
   "accountWelcomeMessage": "Hello **{name}**!",
-  "logout": "Logout"
+  "logout": "Logout",
+  "betaAppDidExpire": "This beta test version **expired on {date}**.",
+  "betaAppWillExpire": "This beta test version will expire on **{date}**.",
+  "AppIsReadOnly": "The beta test version has expired. Data can only be read, but no longer created or edited.",
+  "betaAppExpirationDescription": "From that point on, you can continue to read or export your data, but you can no longer edit or create new data.",
+  "currentVersion": "Current version",
+  "userSettings": "User Settings",
+  "teamSettings": "Team Settings",
+  "overview": "Overview",
+  "organization": "Organization",
+  "team": "Team",
+  "organizationSettings": "Organization Settings",
+  "userData": "My Data",
+  "teamMembers": "Members",
+  "absences": "Absences",
+  "roster": "Roster",
+  "selectTeam": "Select team",
+  "selectOrganization": "Select organization"
 }
