new translated strings

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -135,5 +135,129 @@
   "absences": "Abwesenheiten",
   "roster": "Dienstplanung",
   "selectTeam": "Team auswählen",
-  "selectOrganization": "Organisation auswählen"
+  "selectOrganization": "Organisation auswählen",
+  "contact": "Kontakt",
+  "agreements": "Vereinbarungen",
+  "today": "Heute",
+  "noUpcomingBirthdays": "Keine Geburtstage in nächster Zeit.",
+  "noAbsencesToday": "Alle Kollegen sind hier!",
+  "todaysBirthdays": "{0} feiert Geburtstag! | {0} feiern Geburtstag!",
+  "upcomingBirthdays": "Kommende Geburtstage",
+  "illnessAbsences": "Wegen Krankheit fehlt leider: | Wegen Krankheit fehlen leider: ",
+  "otherAbsences": "Abwesend ist heute: | Abwesend sind heute: ",
+  "untilDate": "bis zum {date}",
+  "illness": "Krankheit",
+  "vacation": "Urlaub",
+  "homeOffice": "Home Office",
+  "school": "Schule/Fortbildung",
+  "specialLeave": "Sonderurlaub",
+  "overtimeReduction": "Überstundenabbau",
+  "unpaidLeave": "Unbezahlter Urlaub",
+  "daysTaken": "Tage genommen",
+  "daysPlanned": "Tage geplant",
+  "daysRemainingLeave": "Tage Resturlaub",
+  "ChangeHistory": "Änderungshistorie",
+  "ChangeHistoryTooltip": "Die Änderungshistorie zeigt alle Änderungen an, die jemals an diesem Datensatz vorgenommen wurden. So kann jeder nachvollziehen, wer wann was geändert hat.",
+  "unknownUser": "Unbekannt",
+  "changesCount": "{count} Änderung | {count} Änderungen",
+  "date": "Datum",
+  "modifiedBy": "Bearbeitet von",
+  "description": "Beschreibung",
+  "selectLanguage": "Sprache: {language}",
+  "dateFormat": "DD.MM.YYYY",
+  "timeFormat": "HH:mm",
+  "datetimeFormat": "DD.MM.YYYY HH:mm",
+  "dateFormatPlaceholder": "TT.MM.JJJJ",
+  "timeFormatPlaceholder": "hh:mm",
+  "datetimeFormatPlaceholder": "TT.MM.JJJJ hh:mm",
+  "add": "Hinzufügen",
+  "edit": "Bearbeiten",
+  "noData": "Keine Daten",
+  "editContact": "Kontakt bearbeiten",
+  "deleteContact": "Kontakt löschen",
+  "done": "Fertig",
+  "withoutNames": "Ohne Namen",
+  "noContactDetails": "Keine Kontaktdaten",
+  "contactIsAnOrganization": "Kontakt ist eine Organisation",
+  "firstName": "Vorname",
+  "lastName": "Nachname",
+  "birthday": "Geburtstag",
+  "profession": "Berufsbezeichnung",
+  "organizationName": "Firma oder Organisation",
+  "addPhoneNumber": "Telefonnummer hinzufügen",
+  "phone": "Telefon",
+  "addEmailAddress": "E-Mail-Adresse hinzufügen",
+  "addPostalAddress": "Adresse hinzufügen",
+  "street": "Straße und Hausnummer",
+  "postalCode": "Postleitzahl",
+  "city": "Stadt",
+  "country": "Land",
+  "contactNotes": "Notizen",
+  "addUrl": "URL hinzufügen",
+  "url": "URL",
+  "postalAddressFormat": "{street1}\\n{postalCode} {city}\\n{country}",
+  "privateLabel": "Privat",
+  "mobileLabel": "Mobil",
+  "workLabel": "Arbeit",
+  "centralOfficeLabel": "Zentrale",
+  "hospitalLabel": "Krankenhaus",
+  "schoolLabel": "Schule",
+  "faxLabel": "Fax",
+  "otherLabel": "Andere",
+  "invoiceAddress": "Rechnungsadresse",
+  "deliveryAddress": "Lieferadresse",
+  "homepageLabel": "Homepage",
+  "showChangeHistory": "Änderungshistorie anzeigen",
+  "warningTitle": "Warnung",
+  "unsavedChangesTitle": "Änderungen verwerfen?",
+  "unsavedChangesMessage": "Du hast Änderungen vorgenommen, die beim Abbrechen verloren gehen. Möchtest du deine Eingaben wirklich verwerfen?",
+  "employeeId": "Mitarbeiter-ID",
+  "jobTitle": "Stellenbezeichnung",
+  "jobDescription": "Stellenbeschreibung",
+  "addMember": "Mitglied hinzufügen",
+  "shift": "Schicht | Schichten",
+  "addItem": "{0} hinzufügen",
+  "editItem": "{0} bearbeiten",
+  "startTime": "Beginn",
+  "endTime": "Ende",
+  "notes": "Notizen",
+  "label": "Bezeichnung",
+  "minimumNumberWorkers": "Mindestanzahl Mitarbeitender",
+  "shiftPosition": "Aufgabenbereich / Position / Rolle",
+  "duration": "Dauer",
+  "weekdayRecurrence": "Wiederholung – jede Woche am:",
+  "endOnFollowingDay": "Ende am Folgetag",
+  "draft": "Entwurf",
+  "approved": "Genehmigt",
+  "discarded": "Verworfen",
+  "deleteItem": "{0} löschen",
+  "approve": "Genehmigen",
+  "discard": "Verwerfen",
+  "noShifts": "Es gibt noch keine Schichten",
+  "calendarWeekAbbr": "KW",
+  "absence": "Abwesenheit",
+  "absenceReason": "Grund",
+  "comment": "Kommentar",
+  "teamMember": "Teammitglied",
+  "day": "Tag | Tage",
+  "fullDay": "Ganzer Tag",
+  "noon": "Mittag",
+  "delete": "Löschen",
+  "withoutDesignation": "Ohne Bezeichnung",
+  "item": "Eintrag | Einträge",
+  "copied": "Kopiert",
+  "confirmContactDeletionMessage": "Sämtliche Daten und Aufzeichnungen über {name} werden unwiederbringlich gelöscht.",
+  "weeklyHours": "Wochenstunden",
+  "employmentStart": "Beginn des Arbeitsverhältnisses",
+  "employmentEnd": "Ende des Arbeitsverhältnisses",
+  "yearlyVacationDays": "Jahresurlaubstage",
+  "grossSalary": "Bruttogehalt",
+  "salaryNotes": "Anmerkungen zum Gehalt",
+  "jobPositions": "Aufgabenbereiche / Positionen / Rollen",
+  "offerOpenShifts": "Offene Schichten anbieten",
+  "collaboration": "Gemeinsame Planung",
+  "copyPreviousWeek": "Von Vorwoche kopieren…",
+  "notAssigned": "nicht besetzt",
+  "overwriteScheduleWarningMessage": "Es existiert bereits ein Dienstplan-Entwurf für die Kalenderwoche {0}. Möchtest du diesen Entwurf wirklich löschen und durch den Dienstplan einer Vorwoche ersetzen?",
+  "overwriteScheduleWarningTitle": "Dienstplan überschreiben?"
 }
