--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -135,5 +135,129 @@
   "absences": "Absences",
   "roster": "Roster",
   "selectTeam": "Select team",
-  "selectOrganization": "Select organization"
+  "selectOrganization": "Select organization",
+  "contact": "Contact",
+  "agreements": "Agreements",
+  "today": "Today",
+  "noUpcomingBirthdays": "No upcoming birthdays.",
+  "noAbsencesToday": "All colleagues are here!",
+  "todaysBirthdays": "{0} is celebrating birthday! | {0} are celebrating birthday!",
+  "upcomingBirthdays": "Upcoming birthdays",
+  "illnessAbsences": "Unfortunately missing due to illness:",
+  "otherAbsences": "Absent today is: | \nAbsent today are:",
+  "untilDate": "until {date}",
+  "illness": "Illness",
+  "vacation": "Vacation",
+  "homeOffice": "Home Office",
+  "school": "School/Training",
+  "specialLeave": "Special Leave",
+  "overtimeReduction": "Overtime Reduction",
+  "unpaidLeave": "Unpaid Leave",
+  "daysTaken": "days taken",
+  "daysPlanned": "days planned",
+  "daysRemainingLeave": "days remaining leave",
+  "ChangeHistory": "{title}: Change history",
+  "ChangeHistoryTooltip": "The change history shows all changes that have ever been made to this record. This way, everyone can track who changed what and when.",
+  "unknownUser": "Unknown user",
+  "changesCount": "{count} Change | {count} Changes",
+  "date": "Date",
+  "modifiedBy": "Modified by",
+  "description": "Description",
+  "selectLanguage": "Language: {language}",
+  "dateFormat": "MM/DD/YYYY",
+  "timeFormat": "hh:mm A",
+  "datetimeFormat": "MM/DD/YYYY hh:mm A",
+  "dateFormatPlaceholder": "MM/DD/YYYY",
+  "timeFormatPlaceholder": "hh:mm AM",
+  "datetimeFormatPlaceholder": "MM/DD/YYYY hh:mm AM",
+  "add": "Add",
+  "edit": "Edit",
+  "noData": "No data",
+  "editContact": "Edit contact",
+  "deleteContact": "Delete contact",
+  "done": "Done",
+  "withoutNames": "Without names",
+  "noContactDetails": "No contact details",
+  "contactIsAnOrganization": "Contact is an organization",
+  "firstName": "First name",
+  "lastName": "Last name",
+  "birthday": "Birthday",
+  "profession": "Profession",
+  "organizationName": "Company or organization",
+  "addPhoneNumber": "Add phone number",
+  "phone": "Phone",
+  "addEmailAddress": "Add email address",
+  "addPostalAddress": "Add address",
+  "street": "Street",
+  "postalCode": "Postal Code",
+  "city": "City",
+  "country": "Country",
+  "contactNotes": "Notes",
+  "addUrl": "Add URL",
+  "url": "URL",
+  "postalAddressFormat": "{street1}\\n{postalCode} {city}\\n{country}",
+  "privateLabel": "Private",
+  "mobileLabel": "Mobile",
+  "workLabel": "Work",
+  "centralOfficeLabel": "Central",
+  "hospitalLabel": "Hospital",
+  "schoolLabel": "School",
+  "faxLabel": "Fax",
+  "otherLabel": "Other",
+  "invoiceAddress": "Invoice address",
+  "deliveryAddress": "Delivery address",
+  "homepageLabel": "Home page",
+  "showChangeHistory": "View change history",
+  "warningTitle": "Warning",
+  "unsavedChangesTitle": "Discard changes?",
+  "unsavedChangesMessage": "You have made changes that will be lost upon canceling. Do you really want to discard your edits?",
+  "employeeId": "Employee ID",
+  "jobTitle": "Job title",
+  "jobDescription": "Job description",
+  "addMember": "Add member",
+  "shift": "Shift | Shifts",
+  "addItem": "Add {0}",
+  "editItem": "Edit {0}",
+  "startTime": "Start",
+  "endTime": "End",
+  "notes": "Notes",
+  "label": "Label",
+  "minimumNumberWorkers": "Minimum number of coworkers",
+  "shiftPosition": "Area of responsibility / position / role",
+  "duration": "Duration",
+  "weekdayRecurrence": "Recurrence – every week on:",
+  "endOnFollowingDay": "End on following day",
+  "draft": "Draft",
+  "approved": "Approved",
+  "discarded": "Discarded",
+  "deleteItem": "Delete {0}",
+  "approve": "Approve",
+  "discard": "Discard",
+  "noShifts": "There are no shifts yet",
+  "calendarWeekAbbr": "Week",
+  "absence": "Absence",
+  "absenceReason": "Reason",
+  "comment": "Comment",
+  "teamMember": "Team member",
+  "day": "day | days",
+  "fullDay": "Full day",
+  "noon": "Noon",
+  "delete": "Delete",
+  "withoutDesignation": "Without designation",
+  "item": "Item | Items",
+  "copied": "Copied",
+  "confirmContactDeletionMessage": "All data and records about {name} will be irretrievably deleted.",
+  "weeklyHours": "weekly hours",
+  "employmentStart": "Start of employment",
+  "employmentEnd": "End of employment",
+  "yearlyVacationDays": "Annual vacation days",
+  "grossSalary": "Gross salary",
+  "salaryNotes": "Notes on salary",
+  "jobPositions": "Areas of responsibility / positions / roles",
+  "offerOpenShifts": "Offer open shifts",
+  "collaboration": "Collaborating",
+  "copyPreviousWeek": "Copy from previous week…",
+  "notAssigned": "not assigned",
+  "overwriteScheduleWarningMessage": "There is already a draft roster for calendar week {0}. \nAre you sure you want to delete this draft and replace it with a previous week's roster?",
+  "overwriteScheduleWarningTitle": "Overwrite roster?"
 }
