roster: improved and simplified layout ans usage, assign member to shift by choosing from select option list of available and unavailable members

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -225,7 +225,7 @@
   "minimumNumberWorkers": "Mindestanzahl Mitarbeitender",
   "shiftPosition": "Aufgabenbereich / Position / Rolle",
   "duration": "Dauer",
-  "weekdayRecurrence": "Wiederholung – jede Woche am:",
+  "weekdayRecurrence": "Wiederholung – jede Woche am",
   "endOnFollowingDay": "Ende am Folgetag",
   "draft": "Entwurf",
   "approved": "Genehmigt",
@@ -254,7 +254,6 @@
   "grossSalary": "Bruttogehalt",
   "salaryNotes": "Anmerkungen zum Gehalt",
   "jobPositions": "Aufgabenbereiche / Positionen / Rollen",
-  "offerOpenShifts": "Offene Schichten anbieten",
   "collaboration": "Gemeinsame Planung",
   "copyPreviousWeek": "Von Vorwoche kopieren…",
   "notAssigned": "nicht besetzt",
@@ -264,5 +263,19 @@
   "copyRosterDialogMessage": "Wähle den Dienstplan einer anderen Woche als Vorlage:",
   "copyRosterWithoutAssignmentsButton": "Schichten ohne Belegung kopieren",
   "copyRosterWithAssignmentsButton": "Einschließlich Schichtbelegung kopieren",
-  "birthdays": "Geburtstage"
+  "birthdays": "Geburtstage",
+  "noMemberAvailable": "niemand verfügbar",
+  "appIconTitle": "App-Icon",
+  "iconMadeBy": "Icon erstellt von",
+  "underLicense": "unter",
+  "changesWereMade": "Änderungen wurden vorgenommen",
+  "original": "Original",
+  "appLanguageSetting": "Sprache der App",
+  "availableMembers": "Verfügbare Mitarbeitende",
+  "syncServerAddress": "Server-Adresse",
+  "activateOpenShiftNotifications": "Offene Schichten mitteilen aktivieren",
+  "deactivateOpenShiftNotifications": "Offene Schichten mitteilen deaktivieren",
+  "notAvailable": "nicht verfügbar",
+  "noAvailability": "keine Zeit",
+  "alreadyAssigned": "bereits eingeteilt"
 }
