--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -225,7 +225,7 @@
   "minimumNumberWorkers": "Minimum number of coworkers",
   "shiftPosition": "Area of responsibility / position / role",
   "duration": "Duration",
-  "weekdayRecurrence": "Recurrence – every week on:",
+  "weekdayRecurrence": "Recurrence – every week on",
   "endOnFollowingDay": "End on following day",
   "draft": "Draft",
   "approved": "Approved",
@@ -254,7 +254,6 @@
   "grossSalary": "Gross salary",
   "salaryNotes": "Notes on salary",
   "jobPositions": "Areas of responsibility / positions / roles",
-  "offerOpenShifts": "Offer open shifts",
   "collaboration": "Collaborating",
   "copyPreviousWeek": "Copy from previous week…",
   "notAssigned": "not assigned",
@@ -264,5 +263,19 @@
   "copyRosterDialogMessage": "Select another week's roster as a template:",
   "copyRosterWithoutAssignmentsButton": "Copy shifts without assignments",
   "copyRosterWithAssignmentsButton": "Copy including shift assignments",
-  "birthdays": "Birthdays"
+  "birthdays": "Birthdays",
+  "noMemberAvailable": "nobody available",
+  "appIconTitle": "App Icon",
+  "iconMadeBy": "Icon made by",
+  "underLicense": "under",
+  "changesWereMade": "Changes have been made",
+  "original": "Original",
+  "appLanguageSetting": "App language",
+  "availableMembers": "Available coworkers",
+  "syncServerAddress": "Server address",
+  "activateOpenShiftNotifications": "Activate notification of open shifts",
+  "deactivateOpenShiftNotifications": "Deactivate notification of open shifts",
+  "notAvailable": "not available",
+  "noAvailability": "no time",
+  "alreadyAssigned": "already divided"
 }
