- main novelty: new local auth using AuthProvider package including new UI components, routes, logic, local account model (WIP) - new Auth views for creating a new organization and joining a team with a new device or as a new user using an invitation code - new MemberList view to administrate devices and organization members and to create invitations - added support for camera usage with regard to system permissions, entitlement and usage description texts - added support for custom url scheme and for navigating this app using these deeplinks - added QRCodeScanner - show banner when offline - store absences on user, not the team, as user can be in multiple teams - sync data of AbsencePage using AuthProvider and automerge-repo packages - adapted AbsencePage for mobile screens and touch devices - generate app icons only when building for a different environment or when explicitly wanted - prototyped UI for AvailabilitiesPage (WIP) - OverviewPage: improved prototype UI and added test data for widgets (requests, notifications, shifts, vacation) - Settings and NavigationDrawer: made team and organization names editable - prevent multiple running app instances on windows and linux - extended EditingSheet functionality and appearance

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -114,7 +114,7 @@
   "offlineBanner": "Keine Internetverbindung",
   "password": "Passwort",
   "login": "Anmelden",
-  "deleteUser": "{username} löschen …",
+  "deleteUser": "{username} lokal löschen",
   "confirmDeletionTitle": "Löschen bestätigen",
   "deleteAccountMessage": "Es werden sämtliche auf diesem Gerät gespeicherten Daten des Benutzers {username} unwiederbringlich gelöscht.",
   "accountWelcomeMessage": "Hallo **{name}**!",
@@ -131,7 +131,8 @@
   "team": "Team",
   "organizationSettings": "Organisations-Einstellungen",
   "userData": "Meine Daten",
-  "teamMembers": "Mitglieder",
+  "members": "Mitglieder",
+  "teamMembers": "Teammitglieder",
   "absences": "Abwesenheiten",
   "roster": "Dienstplanung",
   "selectTeam": "Team auswählen",
@@ -277,5 +278,78 @@
   "deactivateOpenShiftNotifications": "Offene Schichten mitteilen deaktivieren",
   "notAvailable": "nicht verfügbar",
   "noAvailability": "keine Zeit",
-  "alreadyAssigned": "bereits eingeteilt"
+  "alreadyAssigned": "bereits eingeteilt",
+  "addNewOrganization": "Neue Organisation anlegen",
+  "addOrganization": "Organisation anlegen",
+  "organizationName2": "Name der Organisation",
+  "OrganizationNameMissing": "Bitte gib den Namen deiner Organisation an.",
+  "UserHasNoOrganization": "Der Benutzer ist kein Mitglied einer Organisation.",
+  "appSettings": "App-Einstellungen",
+  "myDevices": "Meine Geräte",
+  "device": "Gerät",
+  "invitation": "Einladung",
+  "revokeInvitation": "Einladung widerrufen",
+  "remove": "Entfernen",
+  "share": "Teilen",
+  "expiresIn": "läuft {timeToExpiration} ab",
+  "invitationMessage": "Dein Einladungs-Code: {code}",
+  "invitationCode": "Einladungs-Code",
+  "addNewDevice": "Mit diesem Gerät beitreten",
+  "InvitationCodeMissing": "Bitte gib einen gültigen Einladungs-Code ein.",
+  "addDevice": "Gerät hinzufügen",
+  "thisDevice": "dieses Gerät",
+  "waitingForAdmission": "Warte auf Beitritt...",
+  "myAccount": "ich",
+  "invitationExpirationLabel": "Wann läuft dieser Einladungscode ab?",
+  "invitationMaxUsesLabel": "Wie viele Personen können diese Einladung verwenden?",
+  "inviteMembers": "Mitglieder einladen",
+  "createInvitationCode": "Einladungs-Code erstellen",
+  "unlimited": "unbegrenzt",
+  "never": "nie",
+  "invitationCodeUsage": "{uses} von {maxUses} mal verwendet",
+  "newMembers": "neues Mitglied | neue Mitglieder",
+  "newDevice": "neues Gerät",
+  "invitationTitleWithCode": "*Einladungs-Code für {target}:* **{code}**",
+  "invitationTitleWithoutCode": "*Einladung für {target} (kein Einladungs-Code)*",
+  "missingInvitationCodeHint": "Der Einladungs-Code befindet sich auf dem Gerät, mit dem die Einladung erstellt wurde.",
+  "hasAdminRole": "Admin",
+  "organizationRolesDescription": "**Jedes Mitglied** kann eigene Geräte hinzufügen oder entfernen.\n\n**Ein Admin** kann Mitglieder zur Organisation hinzufügen oder herausnehmen und die Admin-Rolle vergeben.",
+  "hasNoAdminRole": "Kein Admin",
+  "leaveTeam": "Team verlassen",
+  "removeFromTeam": "Aus dem Team nehmen",
+  "leaveOrganization": "Organisation verlassen",
+  "removeFromOrganization": "Aus der Organisation entfernen",
+  "oneAdminRequiredMessage": "Jede Organisation benötigt mindestens einen Admin und {name} ist momentan der einzige Admin dieser Organisation. Um diese Admin-Rolle ablegen oder die Organisation verlassen zu können, muss zuerst ein anderes Mitglied die Admin-Rolle erhalten.",
+  "moreActions": "Weitere Aktionen…",
+  "deviceCount": "{count} Geräte | {count} Geräte",
+  "invitationCount": "{count} Einladung | {count} Einladungen",
+  "dropAdminRoleCaption": "Abwählen um Admin-Rolle abzulegen",
+  "assignAdminRoleCaption": "Auswählen um Admin-Rolle zu erteilen",
+  "name": "Name",
+  "problemsLoggingIn": "Probleme beim Anmelden?",
+  "problemsLoggingInMessage": "Falls du das Passwort für den Benutzer {username} vergessen hast oder deine Nutzerdaten auch nach mehreren Neustarts der App und wiederholten Anmeldeversuchen nicht entschlüsselt werden können, sind die auf diesem Gerät gespeicherten Daten leider verloren und können nicht wiederhergestellt werden.\n\nFalls du noch auf einem weiteren Gerät einen Zugang hast, kannst du dort eine neue Einladung für dieses Gerät erstellen und es damit neu zur Organisation hinzufügen. Falls nicht, kann dir ein Admin eine neue Einladung zusenden, mit der du dir ein neues Benutzerkonto auf diesem Gerät anlegen kannst.\n\nDu kannst die auf diesem Gerät gespeicherten Daten des Benutzers {username} behalten, für den Fall dass dir das Passwort doch noch einfällt, oder diese lokalen Daten löschen. Wenn du dich fürs Löschen entscheidest, informiere bitte den Admin darüber, damit dieser dieses Gerät aus der Organisation entfernen kann, um verwaiste Geräte-Einträge in der Mitglieder-Liste zu vermeiden.",
+  "newPassword": "Neues Passwort",
+  "mobileDevice": "Mobiltelefon",
+  "tabletDevice": "Tablet",
+  "noServerConnection": "Server nicht erreichbar",
+  "waitingForCamera": "Warten auf die Kamera …",
+  "scanQRCode": "Scanne den QR-Code einer Einladung",
+  "switchCameraTorch": "Taschenlampe ein/aus",
+  "rotateCamera": "Kamera wechseln",
+  "logoutToOpenLinkTitle": "Ausloggen um Link zu öffnen?",
+  "logoutToOpenLinkMessage": "Dieser Link kann nur angezeigt werden, wenn du ausgeloggt bist. Möchtest du dich jetzt ausloggen, um den Link zu öffnen?",
+  "select": "Auswählen",
+  "CameraAccessNotAllowedError": "Du hast der App keine Erlaubnis erteilt, auf die Kamera zuzugreifen.",
+  "NoCameraError": "Fehler: keine Kamera erkannt.",
+  "CameraNotReadableError": "Fehler: kein Zugriff auf die Kamera möglich – hast du der App keine Erlaubnis erteilt oder wird die Kamera gerade von einer anderen App verwendet?",
+  "CameraNotSupportedError": "Fehler: die Kamera kann nicht verwendet werden.",
+  "openAppSettings": "Einstellungen-App öffnen",
+  "grantPermission": "Erlaubnis erteilen",
+  "newTeam": "Neues Team",
+  "userAvailability": "Meine Verfügbarkeit",
+  "myShifts": "Meine Schichten",
+  "notifications": "Benachrichtigungen",
+  "requests": "Anfragen",
+  "organizationMembers": "Mitgliederverwaltung",
+  "contacts": "Kontakte"
 }
