--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -114,7 +114,7 @@
   "offlineBanner": "No internet connection",
   "password": "Password",
   "login": "Login",
-  "deleteUser": "Delete {username} …",
+  "deleteUser": "Delete {username} locally",
   "confirmDeletionTitle": "Confirm deletion",
   "deleteAccountMessage": "All data of the user {username} stored on this device will be irretrievably deleted.",
   "accountWelcomeMessage": "Hello **{name}**!",
@@ -131,7 +131,8 @@
   "team": "Team",
   "organizationSettings": "Organization Settings",
   "userData": "My Data",
-  "teamMembers": "Members",
+  "members": "Members",
+  "teamMembers": "Team members",
   "absences": "Absences",
   "roster": "Roster",
   "selectTeam": "Select team",
@@ -158,7 +159,7 @@
   "daysRemainingLeave": "days remaining leave",
   "ChangeHistory": "{title}: Change history",
   "ChangeHistoryTooltip": "The change history shows all changes that have ever been made to this record. This way, everyone can track who changed what and when.",
-  "unknownUser": "Unknown user",
+  "unknownUser": "Unknown",
   "changesCount": "{count} Change | {count} Changes",
   "date": "Date",
   "modifiedBy": "Modified by",
@@ -277,5 +278,78 @@
   "deactivateOpenShiftNotifications": "Deactivate notification of open shifts",
   "notAvailable": "not available",
   "noAvailability": "no time",
-  "alreadyAssigned": "already divided"
+  "alreadyAssigned": "already assigned",
+  "addNewOrganization": "Create new organization",
+  "addOrganization": "Create organization",
+  "organizationName2": "Organization name",
+  "OrganizationNameMissing": "Please enter the name of your organization.",
+  "UserHasNoOrganization": "The user is not a member of an organization.",
+  "appSettings": "App Settings",
+  "myDevices": "My Devices",
+  "device": "Device",
+  "invitation": "Invitation",
+  "revokeInvitation": "Revoke invitation",
+  "remove": "Remove",
+  "share": "Share",
+  "expiresIn": "expires {timeToExpiration}",
+  "invitationMessage": "Your invitation code: {code}",
+  "invitationCode": "Invitation code",
+  "addNewDevice": "Join using this device",
+  "InvitationCodeMissing": "Please enter a valid invitation code.",
+  "addDevice": "Add device",
+  "thisDevice": "this device",
+  "waitingForAdmission": "Waiting for admission...",
+  "myAccount": "me",
+  "invitationExpirationLabel": "When does this invitation code expire?",
+  "invitationMaxUsesLabel": "How many people can use this invitation code?",
+  "inviteMembers": "Invite members",
+  "createInvitationCode": "Create invitation code",
+  "unlimited": "unlimited",
+  "never": "never",
+  "invitationCodeUsage": "{uses} of {maxUses} times used",
+  "newMembers": "new member | new members",
+  "newDevice": "new device",
+  "invitationTitleWithCode": "*Invitation code for {target}:* **{code}**",
+  "invitationTitleWithoutCode": "*Invitation for {target} (no invitation code)*",
+  "missingInvitationCodeHint": "The invitation code is stored on the device that was used to create the invitation.",
+  "hasAdminRole": "Admin",
+  "organizationRolesDescription": "**Every member** can add or remove their own devices.\n\n**An admin** can add or remove members from the organization and assign admin roles.",
+  "hasNoAdminRole": "No admin",
+  "leaveTeam": "Leave team",
+  "removeFromTeam": "Remove from the team",
+  "leaveOrganization": "Leave organization",
+  "removeFromOrganization": "Remove from the organization",
+  "oneAdminRequiredMessage": "Every organization needs at least one admin and {name} is currently the only admin of this organization. To be able to relinquish this admin role or leave the organization, the admin role must first be assigned to another member.",
+  "moreActions": "More actions…",
+  "deviceCount": "{count} devices | {count} devices",
+  "invitationCount": "{count} invitation | {count} invitations",
+  "dropAdminRoleCaption": "Deselect to drop admin role",
+  "assignAdminRoleCaption": "Select to assign admin role",
+  "name": "name",
+  "problemsLoggingIn": "Problems logging in?",
+  "problemsLoggingInMessage": "If you have forgotten the password for the user {username} or your user data cannot be decrypted even after several restarts of the app and repeated login attempts, the data stored on this device is unfortunately lost and cannot be restored.\n\nIf you have access on another device, you can create a new invitation for this device and add it to the organization. If not, an admin can send you a new invitation so that you can create a new user account on this device.\n\nYou can keep the user {username}'s data stored on this device in case you remember the password after all, or you can delete this local data. If you decide to delete it, please inform the admin so that they can remove this device from the organization to avoid orphaned device entries in the member list.",
+  "newPassword": "New password",
+  "mobileDevice": "Mobile",
+  "tabletDevice": "Tablet",
+  "noServerConnection": "Server not reachable",
+  "waitingForCamera": "Waiting for the camera …",
+  "scanQRCode": "Scan an invitation QR code",
+  "switchCameraTorch": "Flashlight on/off",
+  "rotateCamera": "Switch camera",
+  "logoutToOpenLinkTitle": "Log out to open link?",
+  "logoutToOpenLinkMessage": "This link can only be displayed if you are logged out. Would you like to log out now to open the link?",
+  "select": "Select",
+  "CameraAccessNotAllowedError": "You haven't given the app permission to access the camera.",
+  "NoCameraError": "Error: no camera detected.",
+  "CameraNotReadableError": "Error: no camera access possible - did you not grant the app permission or is the camera currently being used by another app?",
+  "CameraNotSupportedError": "Error: the camera cannot be used.",
+  "openAppSettings": "Open Settings app",
+  "grantPermission": "Grant permission",
+  "newTeam": "New team",
+  "userAvailability": "My Availability",
+  "myShifts": "My Shifts",
+  "notifications": "Notifications",
+  "requests": "Requests",
+  "organizationMembers": "Membership Administration",
+  "contacts": "Contacts"
 }
