- introduced accountStore, that holds Automerge DocHandles and Docs for the current user and sub models, the current organization, it's teams and the current team - refactored some data models - bugfixes: deleteItems, deleteStorage - updated dependencies

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -351,5 +351,6 @@
   "notifications": "Benachrichtigungen",
   "requests": "Anfragen",
   "organizationMembers": "Mitgliederverwaltung",
-  "contacts": "Kontakte"
+  "contacts": "Kontakte",
+  "noTeamSelected": "Kein Team ausgewählt"
 }
