--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -351,5 +351,6 @@
   "notifications": "Notifications",
   "requests": "Requests",
   "organizationMembers": "Membership Administration",
-  "contacts": "Contacts"
+  "contacts": "Contacts",
+  "noTeamSelected": "No team selected"
 }
