- bugfix: logout should not fail if offline or if some other error is thrown from auth or automerge repo - updated dependencies

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -150,6 +150,7 @@
   "illness": "Krankheit",
   "vacation": "Urlaub",
   "homeOffice": "Home Office",
+  "worksCouncil": "Betriebsrat",
   "school": "Schule/Fortbildung",
   "specialLeave": "Sonderurlaub",
   "overtimeReduction": "Überstundenabbau",
