--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -150,6 +150,7 @@
   "illness": "Illness",
   "vacation": "Vacation",
   "homeOffice": "Home Office",
+  "worksCouncil": "Works council",
   "school": "School/Training",
   "specialLeave": "Special Leave",
   "overtimeReduction": "Overtime Reduction",
